tests/baselines/reference/inheritFromGenericTypeParameter.errors.txt
==== tests/cases/compiler/inheritFromGenericTypeParameter.ts (2 errors) ====
    class C<T> extends T { }
                       ~
!!! error TS2311: A class may only extend another class.
    interface I<T> extends T { }
                           ~
!!! error TS2312: An interface may only extend a class or another interface.